# sm-htt-analysis

./: plot_control.sh  run_analysis.sh  run_control_analysis.sh
MyRunScripts/: produce_control_shapes.sh  produce_control_shapes_2017.py
MyUtils/: setup_cvmfs_sft.sh  setup_python.sh
ShapeProducer/: CMakeLists.txt  InputManager.py  channel.py  cutstring.py  datasets_helper.py  era.py  estimation_methods.py  estimation_methods_2016.py  estimation_methods_2017.py  estimation_methods_2018.py  histogram.py  systematic_variations.py  systematics.py
ShapeProducer/inc/: CutScheduler.h  Cutstring.h  InputManager.h  Utils.h
ShapeProducer/jsoncpp/: CMakeLists.txt
ShapeProducer/main/: produce_control_shapes.py.in
ShapeProducer/scripts/run/: produce_control_shapes.sh
ShapeProducer/scripts/utils/: setup_cvmfs_root.sh  setup_python.sh
ShapeProducer/shape_producer/: Channels.py  CutScheduler.py  Cutstring.py
ShapeProducer/src/: CutScheduler.cxx  Cutstring.cxx  InputManager.cxx
shapes/: MyProduceShapes2017.py  produce_control_shapes_2017.py  produce_shapes.sh  produce_shapes_2016.py  produce_shapes_2017.py  produce_shapes_2018.py
utils/: setup_cvmfs_sft.sh  setup_python.sh
